--- a/compétences.html
+++ b/compétences.html
@@ -127,7 +127,7 @@
                     </div>
                     <div class="certification_text">
                         <div class="certification_subtitle">
-                            <h4>Méchanique de Newtown</h4>
+                            <h4>Mécanique de Newtown</h4>
                             <p>24/09/2021</p>
                         </div>
                         <p>L'objectif est de développemment de la capacité à traduire un phénomène physique en équations mathématiques, permettant ainsi qu'une analyse rationnelle. Cette section a abordé : la cinématique des objets en mouvement, la balistique en gravité et les oscillations harmoniques.</p>
