--- a/informations.html
+++ b/informations.html
@@ -43,8 +43,10 @@
     </header>
 
     <main class="main_informations">
-        <h2>les wireframes du projet</h2>
-        <h3>la version desktop</h3>
+        <h2>Les wireframes du projet</h2>
+        <h3>Adresse mail</h3>
+        <p>joris.dufrenne@std.heh.be</p>
+        <h3>La version desktop</h3>
         <h4>Accueil</h4>
         <img src="./img/wireframes/Desktop.jpg" alt="version desktop accueil">
         <h4>Compétences</h4>
@@ -53,7 +55,7 @@
         <img src="./img/wireframes/Desktop3.jpg" alt="version desktop comming-soon">
         <h4>Contact</h4>
         <img src="./img/wireframes/Desktop4.jpg" alt="version desktop contact">
-        <h3>la version mobile</h3>
+        <h3>La version mobile</h3>
         <h4>Accueil</h4>
         <img src="./img/wireframes/mobile.jpg" alt="version mobile accueil">
         <h4>Compétences</h4>
