--- a/comming-soon.html
+++ b/comming-soon.html
@@ -50,10 +50,10 @@
 
     <footer>
         <div class="social">
-              <a href="https://www.facebook.com/joris.dufrenne.7/"><img src="./icones/fb.svg" alt="Facebook"></a>
-              <a href="https://www.linkedin.com/in/joris-dufrenne-0b35b2220/"><img src="./icones/link.svg" alt="Linkedin"></a>
-              <a href="https://www.instagram.com/pronyx_naiki/"><img src="./icones/insta.svg" alt="Instagram"></a>
-              <a href="https://github.com/YameteNekoSan"><img src="./icones/git.svg" alt="GitHubr"></a>
+            <a href="https://www.facebook.com/joris.dufrenne.7/" target="_blank"><img src="./icones/fb.svg" alt="Facebook"></a>
+            <a href="https://www.linkedin.com/in/joris-dufrenne-0b35b2220/" target="_blank"><img src="./icones/link.svg" alt="Linkedin"></a>
+            <a href="https://www.instagram.com/pronyx_naiki/" target="_blank"><img src="./icones/insta.svg" alt="Instagram"></a>
+            <a href="https://github.com/YameteNekoSan" target="_blank"><img src="./icones/git.svg" alt="GitHubr"></a>
         </div>
         <p class="copyright">Joris Dufrenne Copyright © 2023-2024 - All rights reserved || Designed By: Joris Dufrenne</p>
     </footer>
